# back/api/alembic/versions/ead92eb28172_create_inital_tables.py
@@ -1,0 +1,57 @@
+"""Create inital tables
+
+Revision ID: ead92eb28172
+Revises:
+Create Date: 2025-12-20 11:21:03.842572
+
+"""
+
+from typing import Sequence, Union
+
+import sqlalchemy as sa
+
+from alembic import op
+
+
+# revision identifiers, used by Alembic.
+revision: str = 'ead92eb28172'
+down_revision: Union[str, Sequence[str], None] = None
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    """Upgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.create_table(
+        'threads',
+        sa.Column('id', sa.String(), nullable=False),
+        sa.Column('user_id', sa.String(), nullable=False),
+        sa.Column('title', sa.String(length=255), nullable=False),
+        sa.Column('created_at', sa.DateTime(), nullable=False),
+        sa.PrimaryKeyConstraint('id'),
+    )
+    op.create_index(op.f('ix_threads_user_id'), 'threads', ['user_id'], unique=False)
+    op.create_table(
+        'messages',
+        sa.Column('id', sa.String(), nullable=False),
+        sa.Column('thread_id', sa.String(), nullable=False),
+        sa.Column('text', sa.String(), nullable=False),
+        sa.Column('sender', sa.String(length=10), nullable=False),
+        sa.Column('timestamp', sa.DateTime(), nullable=False),
+        sa.ForeignKeyConstraint(
+            ['thread_id'],
+            ['threads.id'],
+        ),
+        sa.PrimaryKeyConstraint('id'),
+    )
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    """Downgrade schema."""
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_table('messages')
+    op.drop_index(op.f('ix_threads_user_id'), table_name='threads')
+    op.drop_table('threads')
+    # ### end Alembic commands ###
